[tool.poetry]
name = "aiowire"
version = "1.0.1"
description = "A simple event loop using asyncio"
authors = ["David M. Rogers <predictivestatmech@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/frobnitzem/aiowire"
license = "LGPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.9"
pyzmq = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
